--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,8 @@
-
-annotated-types==0.7.0
-anyio==4.8.0
-appdirs==1.4.4
-
-atomicwrites==1.4.0
-
-backports.weakref==1.0.post1
-
-brotlipy==0.7.0
-cachetools==5.5.2
-
-
-constantly==15.1.0
-cssselect==1.1.0
-
-datashape==0.5.4
-
-et-xmlfile==1.1.0
-
-flask-cors==5.0.1
-Flask-JWT-Extended==4.7.1
-fonttools==4.25.0
-
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.163.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-genai==1.5.0
-google-generativeai==0.8.4
-googleapis-common-protos==1.69.1
-
-grpcio==1.70.0
-grpcio-status==1.70.0
-h11==0.14.0
-
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-
-inflection==0.5.1
-
-jsonpointer==2.1
-
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.4.0
-
-openpyxl==3.0.10
-pandas==1.5.3
-
-patsy==0.5.3
-pep8==1.7.1
-
-ply==3.11
-
-proto-plus==1.26.0
-protobuf==5.29.3
-
-pyarrow==11.0.0
-pyasn1-modules==0.2.8
-PyAudio==0.2.14
-
-pycurl==7.45.2
-pydantic==2.10.6
-pydantic_core==2.27.2
-PyDispatcher==2.0.5
-
-pyls-spyder==0.4.0
-
-pyproject==1.3.1
-pyproject-toml==0.0.10
-PyQt5==5.15.10
-
-python-lsp-jsonrpc==1.0.0
-
-queuelib==1.5.0
-
-rsa==4.9
-
-scipy==1.10.1
-
-sounddevice==0.4.6
-
-TBB==0.2
-
-typing_extensions==4.12.2
-
-uritemplate==4.1.1
-
-webencodings==0.5.1
-websockets==14.2
-
-rembg
+Flask
+flask-cors
+Flask-JWT-Extended
+google-generativeai
+requests
+Werkzeug
 gunicorn
+rembg
